# barabella

./: BUGS  CMakeLists.txt  README  floor_extractor.cpp  floor_extractor.h  kinect_interface.cpp  kinect_interface.h  utils.cpp  utils.h  view3d.cpp  view3d.h  weighttracker.cpp
doc/: .licenceproto.swp  licenceproto
src/: CMakeLists.txt  barabella_app.cpp  barabella_app.h  barabella_config.h.in  clip.cpp  clip.h  clip_player.h  floor_extractor.cpp  floor_extractor.h  frame_observer.h  global_options.cpp  global_options.h  icp_framed_tracker.cpp  icp_framed_tracker.h  kinect_interface.cpp  kinect_interface.h  producer_consumer_queue.cpp  producer_consumer_queue.h  selection_cube.cpp  selection_cube.h  template.cpp  template.h  tracker.cpp  tracker.h  update_signal.h  utils.cpp  utils.h  view3d.cpp  view3d.h  weighttracker.cpp
src/core/: CMakeLists.txt  barabella_config.h  barabella_config.h.in  clip.cpp  clip.h  clip_player.cpp  floor_extractor.cpp  floor_extractor.h  frame_observer.cpp  frame_observer.h  global_options.cpp  global_options.h  icp_framed_tracker.cpp  icp_framed_tracker.h  kinect_interface.cpp  kinect_interface.h  producer_consumer_queue.cpp  producer_consumer_queue.h  template.cpp  template.h  tracker.h  update_signal.cpp  update_signal.h  utils.h
src/gui/: CMakeLists.txt  barbarellauitest.cpp  barbarellauitest.h  barbarellauitest.qrc  barbarellauitest.ui  main.cpp  maincloudwidget.cpp  maincloudwidget.h  pclcloudwidget.cpp  pclcloudwidget.h  view3d.cpp  view3d.h
