cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(WEIGHT_TRACKER)
#find_package(PCL 1.6 REQUIRED COMPONENTS common io visualize)
find_package(PCL 1.6 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(weight_tracker weighttracker.cpp kinect_interface.cpp view3d.cpp floor_extractor.cpp utils.cpp)
target_link_libraries(weight_tracker ${PCL_LIBRARIES})
